refactor(api,docs): move revision to document mostly
