# api/note/openapi.yaml
@@ -25,8 +25,6 @@ tags:
     description: Folder in workspace
   - name: Note
     description: Note in workspace's root folder or in a folder
-  - name: Revision
-    description: Note revisions
 
 paths:
   /note/folders:
@@ -50,15 +48,6 @@ paths:
     $ref: ./paths/notes_{noteId}_rename.yaml
   /note/notes/{noteId}/unpublish:
     $ref: ./paths/notes_{noteId}_unpublish.yaml
-
-  /note/revisions:
-    $ref: ./paths/revisions.yaml
-  /note/revisions/{revisionId}/apply:
-    $ref: ./paths/revisions_{revisionId}_apply.yaml
-  /note/revisions/{revisionId}/rename:
-    $ref: ./paths/revisions_{revisionId}_rename.yaml
-  /note/revisions/{revisionId}:
-    $ref: ./paths/revisions_{revisionId}.yaml
 
   /note/workspaces:
     $ref: ./paths/workspaces.yaml
