# packages/api-document-nestjs-server/models/revision.ts
@@ -1,0 +1,12 @@
+
+
+export interface Revision { 
+  readonly id: string;
+  name: string | null;
+  /**
+   * BlockNote model
+   */
+  content: Array<object> | null;
+  readonly createdAt: string;
+}
+
